objects/sf4twitter__Twitter_Search__c.object
<CustomObject>
    <fields>
        <fullName>sf4twitter__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For each search result the user wants to add all the tweets for a lead or contact to a specific campaign.</description>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Twitter Searches</relationshipLabel>
        <relationshipName>Twitter_Searches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Last_Tweet_Ids__c</fullName>
        <label>Last Tweet Ids</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Partial_Twitter_Max_Search__c</fullName>
        <label>Partial Twitter Max Search</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Results_Per_Page__c</fullName>
        <defaultValue>100</defaultValue>
        <label>Results Per Page</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Search_Tweet_Id_Offset__c</fullName>
        <label>Search Tweet Id Offset</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Tweet_Id_Threshold__c</fullName>
        <formula>TEXT(MAX(1, VALUE( BLANKVALUE( sf4twitter__Twitter_Max_Search__c , &apos;1&apos;) ) - VALUE( BLANKVALUE(sf4twitter__Search_Tweet_Id_Offset__c, &apos;10000&apos;))))</formula>
        <label>Tweet Id Threshold</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Keyword_Search__c</fullName>
        <inlineHelpText>Search information in http://search.twitter.com/operators</inlineHelpText>
        <label>Twitter Keyword Search</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Twitter_Max_Search__c</fullName>
        <label>Twitter Max Search</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sf4twitter__Unknown_Twitter_Usernames__c</fullName>
        <label>Unknown Twitter Usernames</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Do nothing</fullName>
                    <default>true</default>
                    <label>Do nothing</label>
                </value>
                <value>
                    <fullName>Create Contact</fullName>
                </value>
                <value>
                    <fullName>Create Lead</fullName>
                </value>
                <value>
                    <fullName>Create Person Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf4twitter__Weight__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sf4twitter__ignore_maxid__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When searching for tweets previous results are filtered out from the new results, by turning this option &apos;On&apos; the search will bring all results up to the maximum allowed by twitter.</inlineHelpText>
        <label>Get max tweets incl. previous results</label>
        <type>Checkbox</type>
    </fields>
    <label>Twitter Search</label>
    <listViews>
        <fullName>sf4twitter__All</fullName>
        <columns>NAME</columns>
        <columns>sf4twitter__Twitter_Keyword_Search__c</columns>
        <columns>sf4twitter__Unknown_Twitter_Usernames__c</columns>
        <columns>sf4twitter__Weight__c</columns>
        <columns>sf4twitter__Active__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>sf4twitter__My_Searches</fullName>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>sf4twitter__Twitter_Keyword_Search__c</columns>
        <columns>sf4twitter__Unknown_Twitter_Usernames__c</columns>
        <columns>sf4twitter__Active__c</columns>
        <columns>sf4twitter__Weight__c</columns>
        <columns>sf4twitter__Twitter_Max_Search__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Searches</label>
    </listViews>
    <nameField>
        <label>Twitter Search Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Twitter Searches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>sf4twitter__Create_contact_or_lead</fullName>
        <active>true</active>
        <description>You must select an object to add to the campaign</description>
        <errorConditionFormula>AND ( 
 ISPICKVAL(sf4twitter__Unknown_Twitter_Usernames__c,&apos;Do nothing&apos; ),
 NOT ISBLANK(sf4twitter__Campaign__c) 
)</errorConditionFormula>
        <errorDisplayField>sf4twitter__Unknown_Twitter_Usernames__c</errorDisplayField>
        <errorMessage>You must select an object to add to the campaign</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sf4twitter__Max_results_per_page</fullName>
        <active>true</active>
        <errorConditionFormula>sf4twitter__Results_Per_Page__c&gt;100</errorConditionFormula>
        <errorMessage>The number of results per page must be below 100</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sf4twitter__Non_negative_search_orders</fullName>
        <active>true</active>
        <errorConditionFormula>sf4twitter__Weight__c &lt; 0</errorConditionFormula>
        <errorDisplayField>sf4twitter__Weight__c</errorDisplayField>
        <errorMessage>The order must be non negative.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sf4twitter__Search_Tweet_Id_Offset_must_be_a_number</fullName>
        <active>true</active>
        <description>The value entered into the Search Tweet Id Offset field must be a number</description>
        <errorConditionFormula>AND(
  NOT(ISBLANK(sf4twitter__Search_Tweet_Id_Offset__c)),
  NOT(ISNUMBER(sf4twitter__Search_Tweet_Id_Offset__c))
)</errorConditionFormula>
        <errorDisplayField>sf4twitter__Search_Tweet_Id_Offset__c</errorDisplayField>
        <errorMessage>Invalid number</errorMessage>
    </validationRules>
</CustomObject>